# test-burn

./: .gitignore  5.1-summary.md  5.1-todo.md  5.2-summary.md  5.3-todo.md  AGENTS.md  CONTINUE.md  CURRENT.md  Cargo.toml  FOUNDRY_TODO.md  GGML-METALLIC.md  GGUF_OUTLINE.md  GGUF_TODO.md  IMPROVEMENTS_TODO.md  INSTRUMENTATION.md  KERNELS.md  KVCACHE_TODO.md  LATEST_FOUNDRY.md  LATEST_FOUNDRY_TODO.md  LEGACY_TODO.md  METALLIC_OUTLINE.md  METALLIC_QWEN_FIXES.md  MLX_MATMUL.md  MPSGraphNextSteps.md  PERFORMANCE_REPORT.md  PLAN.md  PROJECT_RULES.md  QUICK_START.md  QWEN2.5_ARCHITECTURE.md  QWEN2.5_IMPLEMENTATION_PLAN.md  Qwen2.5-Coder-0.5B-Instruct-F16_MetadataDump.txt  Qwen2.5-Coder-0.5B-Instruct-MetadataDump.txt  README.md  STATUS.md  TENSOR_SYNC.md  TESTS-TODO.md  TODO.md  TOKENIZER_THOUGHTS.md  UPDATED_INSTRUMENTS.md  WAN25_TODO.md  (+24 more)
crates/metallic/: Cargo.toml  build.rs
crates/metallic-foundry/: Cargo.toml
crates/metallic-foundry/src/: constants.rs  error.rs  foundry_config.rs  fusion.rs  generation.rs  instrument.rs  instrument.test.rs  kernel_registry.rs  kernel_registry.test.rs  lib.rs  model_routing.rs  model_routing.test.rs  pool.rs  storage.rs  template.rs  template.test.rs  tokenizer.rs
crates/metallic-foundry/src/compound/: code_builder.rs  code_builder.test.rs  layout.rs  layout.test.rs  mod.rs
crates/metallic-foundry/src/gguf/: file.rs  mod.rs  model_loader.rs
crates/metallic-foundry/src/metals/: matmul.rs  matmul.test.rs  mod.rs
crates/metallic-foundry/src/model/: builder.rs  context.rs  context.test.rs  executor.rs  executor.test.rs  kv_geometry.rs  kv_geometry.test.rs  metadata_defaults.rs  metadata_defaults.test.rs  mod.rs
crates/metallic-foundry/src/policy/: activation.rs  block_quant.rs  f16.rs  f32.rs  f32_native.rs  f64.rs  mod.rs  q4_0.rs  q4_0.test.rs  q4_1.rs  q4_1.test.rs  q5_k.rs  q5_k.test.rs  q6_k.rs  q6_k.test.rs  q8.rs  q8.test.rs  raw.rs  variant.rs  variant.test.rs
crates/metallic-foundry/src/spec/: compiled.rs  dynamic.rs  dynamic.test.rs  int_expr.rs  int_expr.test.rs  mod.rs  model_spec.rs  repeat.rs  step.rs
crates/metallic-foundry/src/tensor/: dtypes.rs  enums.rs  mod.rs  quantized.rs
crates/metallic-foundry/tests/: activation_fusion_parity.rs  batched_pipeline_parity.rs  batched_prefill_repro.rs  bench_qwen25_matmul.rs  channel_u32.rs  chat_template_tokens_optional.rs  dsl_forward.rs  dsl_gemv_probe.rs  dsl_generation.rs  dsl_layer_bindings.rs  dsl_vs_context_chat_prefill_parity.rs  dsl_vs_context_generation_seed_parity.rs  dsl_vs_context_parity.rs  embedding.rs  embedding_q8_smoke.rs  flashattention_decode_engine_parity.rs  flashattention_decode_fixed_buffers_parity.rs  flashattention_decode_micro_benchmark.rs  flashattention_decode_parity.rs  flashattention_decode_variant_sweep.rs  flashattention_dtype_failfast.rs  flashattention_prefill_parity.rs  flashattention_prefill_variant_sweep.rs  flashattention_rope_decode_f32_parity_perf.rs  flashattention_rope_decode_variant_sweep.rs  flashattention_stage_smoke.rs  fp16_fused_parity.rs  fp16_transposed_parity.rs  fused_ffn_runtime_dtype_regression.rs  fused_ffn_swiglu_rmsnorm_parity.rs  fused_gemv_parity.rs  fused_mixed_policy_benchmark.rs  fused_qkv_batched_rmsnorm_parity.rs  fused_qkv_policy_paths.rs  fused_swiglu_mixed_policy.rs  gemm_v2_benchmark.rs  gemm_v2_parity.rs  gemm_vs_gemv_vs_unified.rs  gemv_canonical_batched_parity.rs  gemv_decode_cols8_benchmark.rs  (+56 more)
crates/metallic-foundry/workflows/: multiturn_chat.json  multiturn_chat_bufferwrite.json  multiturn_chat_direct.json  text_generation.json  text_generation_stream_u32.json
crates/metallic-gui/: Cargo.toml
crates/metallic-gui/src/: app.rs  db.rs  inference.rs  lib.rs  main.rs  state.rs  theme.rs  types.rs
crates/metallic-loader/: Cargo.toml
crates/metallic-loader/src/: lib.rs  loader.rs  quant_spec.rs  quant_spec.test.rs
crates/metallic-macros/: Cargo.toml
crates/metallic-macros/src/: conditional.rs  derive_compiled_step_impl.rs  derive_compound_kernel_impl.rs  derive_conditional_kernel_impl.rs  derive_gguf_block_quant_runtime_impl.rs  derive_kernel_args_impl.rs  derive_kernel_impl.rs  derive_metal_policy_impl.rs  derive_metal_struct_impl.rs  derive_stage_impl.rs  lib.rs
crates/metallic-macros/tests/: stage_derive.rs
crates/metallic/benches/: binding_overhead.rs
crates/metallic/pytorch/: benchmark.py  compare_ffn_debug.py  instrument_qwen25.py  temp_get_tokens.py  transformer-version.py
crates/metallic/src/: cache_keys.rs  cacheable.rs  cacheable_resources.rs  cacheable_sdpa.rs  context.rs  encoder.rs  error.rs  fusion.rs  generation.rs  instrumentation.rs  lib.rs  macros.rs  metrics.rs  operation.rs  policies.rs  pool.rs  profiling_state.rs  resource_cache.rs  resource_cache_metrics.rs  softmax_utils.rs  tensor_preparation_cache.rs  tokenizer.rs  types.rs
crates/metallic/tests/: dsl_forward.rs  dsl_gemv_probe.rs  dsl_generation.rs  dsl_layer_bindings.rs  dsl_vs_context_generation_seed_parity.rs  dsl_vs_context_parity.rs  embedding.rs  fused_gemv_parity.rs  gemm_v2_benchmark.rs  gemm_v2_parity.rs  gemm_vs_gemv_vs_unified.rs  gemv.rs  gemv_v2_benchmark.rs  gemv_v2_canonical_parity.rs  gemv_v2_context_parity.rs  gemv_v2_parity.rs  kv_cache.rs  kv_rearrange.rs  matmul_unified_benchmark.rs  prefill_parity_suite.rs  qkv_parity.rs  qkv_parity_f16.rs  repeat_kv_heads.rs  rmsnorm.rs  rope.rs  rope_v2_context_parity.rs  sampling.rs  sdpa.rs  sdpa_materialized_parity.rs  sdpa_v2_benchmark.rs  sdpa_v2_compilation.rs  sdpa_v2_context_parity.rs  sdpa_v2_feature_parity.rs  sdpa_v2_parity.rs  softmax.rs  softmax_v2_context_parity.rs  softmax_v2_parity.rs  swiglu.rs  swiglu_parity.rs  utility_kernels.rs
crates/metallic_cli_helpers/: Cargo.toml
crates/metallic_cli_helpers/src/: alert.rs  app_event.rs  lib.rs
crates/metallic_instrumentation/: Cargo.toml  README.md
crates/metallic_instrumentation/src/: async_recorder.rs  config.rs  event.rs  exporters.rs  gpu_profiler.rs  lib.rs  logging.rs  macros.rs  memory_collector.rs  memory_profiler.rs  memory_profiler.test.rs  memory_reporter.rs  prelude.rs  recorder.rs
(+1166 files in other folders)
