[package]
name = "test-burn"
version = "0.1.0"
edition = "2024"

[lib]
bench = false

[dependencies]
burn = { version = "0.18.0", features = ["webgpu", "fusion", "metal"] }
objc2 = "0.6.2"
objc2-foundation = "0.3.1"
objc2-metal = "0.3.1"
objc2-metal-performance-shaders = "0.3.1"
rand = "0.9.2"
rayon = "1.11"
rustc-hash = "2.1.1"
serde = { version = "1.0.227", features = ["derive"] }
thiserror = "2.0.16"
memmap2 = "0.9"
byteorder = "1.5"
half = "2.4"
approx = "0.5.1"
serde_json = "1.0.145"
ndarray-npy = "0.9.1"
ndarray = "0.16.1"
regex = "1.11.3"
unicode-normalization = "0.1.22"
fancy-regex = "0.16.2"
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"
anyhow = "1.0.100"
sysinfo = "0.36"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "tokenizer_benchmark"
harness = false

[[bench]]
name = "sdpa_benchmark"
harness = false

[[bench]]
name = "tensor_benchmark"
harness = false

[[bench]]
name = "gguf_quant_benchmark"
harness = false
