[workspace]
members = [
    "crates/metallic_env",
    "crates/metallic_instrumentation",
    "crates/metallic",
    "crates/metallic_cli_helpers",
]

[package]
name = "metallic_cli"
version = "0.1.0"
edition = "2024"


[dependencies]
burn = { version = "0.18.0", features = ["webgpu", "fusion", "metal"] }
objc2 = "0.6.2"
objc2-foundation = { version = "0.3.1", features = ["NSData"] }
objc2-metal = { version = "0.3.1", features = [
    "block2",
    "MTLArgument",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandQueue",
    "MTLFunctionConstantValues",
    "MTLCounters",
] }
objc2-metal-performance-shaders = "0.3.2"
block2 = "0.6.2"
rand = "0.9.2"
rayon = "1.11"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
memmap2 = "0.9"
byteorder = "1.5"
bytemuck = { version = "1.24.0", features = ["derive"] }
approx = "0.5.1"
serde_json = "1.0.145"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
ndarray-npy = "0.9.1"
ndarray = "0.16.1"
regex = "1.12.2"
unicode-normalization = "0.1.22"
fancy-regex = "0.16.2"
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"
anyhow = "1.0.100"
arboard = "3.4"
chrono = { version = "0.4", features = ["clock", "serde"] }
half = { version = "2.7.0", features = ["zerocopy", "bytemuck", "num-traits", "use-intrinsics"] }
num-traits = "0.2.19"
libc = { version = "0.2.177", optional = false }
mach2 = "0.5"
metallic_env = { path = "crates/metallic_env" }
metallic_instrumentation = { path = "crates/metallic_instrumentation" }
metallic = { path = "crates/metallic" }
metallic_cli_helpers = { path = "crates/metallic_cli_helpers" }
clap = { version = "4.5.49", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "tokenizer_benchmark"
harness = false

[[bench]]
name = "sdpa_benchmark"
harness = false

[[bench]]
name = "sdpa_variant_benchmark"
harness = false

[[bench]]
name = "tensor_benchmark"
harness = false

[[bench]]
name = "gguf_quant_benchmark"
harness = false

[[bench]]
name = "swiglu_cache_benchmark"
harness = false

[[bench]]
name = "softmax_backend_benchmark"
harness = false

[[bench]]
name = "mlx_vs_mps_matmul_benchmark"
harness = false

[[bench]]
name = "matmul_dispatcher_bench"
path = "benches/tuning_kernels/matmul_dispatcher_bench.rs"
harness = false

[[bench]]
name = "softmax_dispatcher_bench"
path = "benches/tuning_kernels/softmax_dispatcher_bench.rs"
harness = false

[[bench]]
name = "direct_kernel_bench"
path = "benches/tuning_kernels/direct_kernel_bench.rs"
harness = false


[[bench]]
name = "batch_record_benchmark"
harness = false

[[bench]]
name = "pipeline_bench"
path = "benches/tuning_kernels/pipeline_bench.rs"
harness = false

[[bench]]
name = "gemm_tiled_benchmark"
harness = false

[[bench]]
name = "sdpa_mpsgraph_vs_current_benchmark"
harness = false
