[package]
name = "metallic_cli"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/metallic_env",
    "crates/metallic_instrumentation",
    "crates/metallic-foundry",
    "crates/metallic-context",
    "crates/metallic_cli_helpers",
    "crates/metallic-macros",
    "crates/metallic-loader",
    "crates/metallic-gui",
]

[features]
src_kernels = ["metallic-context/src_kernels"]
built_kernels = ["metallic-context/built_kernels"]

[dependencies]
objc2 = "0.6.2"
objc2-foundation = { version = "0.3.1", features = ["NSData"] }
objc2-metal = { version = "0.3.1", features = [
    "block2",
    "MTLArgument",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandQueue",
    "MTLFunctionConstantValues",
    "MTLCounters",
] }
objc2-metal-performance-shaders = "0.3.2"
block2 = "0.6.2"
rand = "0.9.2"
rayon = "1.11"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
memmap2 = "0.9"
byteorder = "1.5"
bytemuck = { version = "1.24.0", features = ["derive"] }
approx = "0.5.1"
serde_json = "1.0.145"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
ndarray-npy = "0.9.1"
ndarray = "0.16.1"
regex = "1.12.2"
unicode-normalization = "0.1.22"
fancy-regex = "0.16.2"
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"
tui-markdown = "0.3.6"
anyhow = "1.0.100"
arboard = "3.4"
chrono = { version = "0.4", features = ["clock", "serde"] }
half = { version = "2.7.0", features = [
    "zerocopy",
    "bytemuck",
    "num-traits",
    "use-intrinsics",
] }
num-traits = "0.2.19"
libc = { version = "0.2.177", optional = false }
mach2 = "0.5"
metallic_env = { path = "crates/metallic_env" }
metallic_instrumentation = { path = "crates/metallic_instrumentation" }
metallic-context = { path = "crates/metallic-context", default-features = false }
metallic-foundry = { path = "crates/metallic-foundry" }
metallic_cli_helpers = { path = "crates/metallic_cli_helpers" }
metallic-loader = { path = "crates/metallic-loader" }
clap = { version = "4.5.49", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.7", features = ["html_reports"] }
