[package]
name = "metallic-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.4.0"

[dev-dependencies]
trybuild = "1.0"
metallic-foundry = { path = "../metallic-foundry" }
