[package]
name = "metallic"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
# Use Metal source at runtime (default in debug)
src_kernels = []

# Use prebuilt .metallib (default in release)
built_kernels = []

[build-dependencies]
walkdir = "2.5.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[dependencies]
burn = { version = "0.18.0", features = ["webgpu", "fusion", "metal"] }
objc2 = "0.6.2"
objc2-foundation = { version = "0.3.1", features = ["NSData"] }
objc2-metal = { version = "0.3.1", features = [
    "block2",
    "MTLArgument",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandQueue",
    "MTLFunctionConstantValues",
    "MTLCounters",
] }
dispatch2 = "0.3.0"
objc2-metal-performance-shaders = "0.3.1"
block2 = "0.6.1"
rand = "0.9.2"
rayon = "1.11"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
memmap2 = "0.9"
byteorder = "1.5"
bytemuck = { version = "1.15", features = ["derive"] }
approx = "0.5.1"
serde_json = "1.0.145"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
ndarray-npy = "0.9.1"
ndarray = "0.16.1"
regex = "1.11.3"
unicode-normalization = "0.1.22"
fancy-regex = "0.16.2"
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"
anyhow = "1.0.100"
sysinfo = "0.37.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
half = { version = "2.6.0", features = [
    "zerocopy",
    "bytemuck",
    "num-traits",
    "use-intrinsics",
] }
num-traits = "0.2.19"
libc = { version = "0.2", optional = false }
mach2 = "0.5"
metallic_env = { path = "../metallic_env" }
metallic_instrumentation = { path = "../metallic_instrumentation" }
metallic_cli_helpers = { path = "../metallic_cli_helpers" }
objc2-metal-performance-shaders-graph = "0.3.2"
metallic-macros = { path = "../metallic-macros" }

[dev-dependencies]
serial_test = "3.2.0"
