[package]
name = "metallic_cli_helpers"
version = "0.1.0"
edition = "2024"
description = "Environment variable helpers shared across Metallic instrumentation."
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
